# fastllm

./: .gitignore  CMakeLists.txt  chainlit_main.py  compile.sh  debug.sh  environment.yml  start_ui.sh  trace.sh
include/: device.h  fastllm.h
include/devices/rocm/: fastllm-rocm.hiph  rocmdevice.h
include/models/: basellm.h
pyfastllm/: setup.py
src/: device.cpp  executor.cpp  fastllm.cpp
src/devices/rocm/: fastllm-rocm.hip  rocmdevice.cpp  rocmdevicebatch.cpp
src/models/: basellm.cpp  chatglm.cpp  glm.cpp  llama.cpp  moss.cpp  qwen.cpp
test/ops/: cppOps.cpp
